Zuvor: leere Box. Hier: W1 Bildung-Versuch.

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       pointer-events: none;
     }
 
-    /* Basis-Layer (W2+W1 gespeichert) bleibt im Code, aber ist weiterhin unsichtbar */
+    /* Basis-Layer (W2+W1 gespeichert) bleibt im Code, aber ist unsichtbar */
     .pairLayer{
       position:absolute;
       inset:0;
@@ -190,7 +190,8 @@
     }
 
     .cube,
-    .cube2{
+    .cube2,
+    .cubeW1{
       position:absolute;
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
@@ -209,9 +210,10 @@
         linear-gradient(135deg, rgba(255,255,255,0.16), rgba(0,0,0,0.08)),
         linear-gradient(180deg, var(--cube-wood-base), var(--cube-wood-deep));
 
-      border: 4px solid var(--cube-border);
+      border: 4px solid var(--cube-border); /* Innenrahmen wie bisher */
       border-radius: clamp(10px, 2.2vmin, 18px);
 
+      /* Würfel-Body-Schatten (am Objekt) bleibt wie gehabt */
       box-shadow:
         0 12px 22px rgba(0,0,0,0.28),
         0 0 0 1px rgba(255,255,255,0.10) inset;
@@ -221,6 +223,43 @@
 
     .pairLayer .cube { left: var(--cube-x); top: var(--cube-y); }
     .pairLayer .cube2{ left: calc(4 * var(--step)); top: calc(1 * var(--step)); }
+
+    /* ---------- W1 (NEU) ---------- */
+    .w1Layer{
+      position:absolute;
+      inset:0;
+      z-index: 7; /* über Floor, unter Kugel ok */
+      pointer-events:none;
+    }
+
+    /* W1 Würfelfläche: von 2B bis 4D (3×3), Top-Left = 2B */
+    .w1Cube{
+      left: calc(1 * var(--step)); /* Spalte B */
+      top:  calc(1 * var(--step)); /* Zeile 2 */
+    }
+
+    /* Schatten auf den Boxboden: nur im Innenraum der Box sichtbar */
+    .w1Shadow{
+      position:absolute;
+      left: calc(1 * var(--step));
+      top:  calc(1 * var(--step));
+      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      border-radius: clamp(10px, 2.2vmin, 18px);
+      background: transparent;
+
+      /* Schattenwurf in Richtung Innenraum (rechts + unten) */
+      box-shadow:
+        18px 16px 26px rgba(0,0,0,0.42),
+        10px 10px 16px rgba(0,0,0,0.28);
+
+      z-index: 5;
+      pointer-events:none;
+
+      /* Clipping: Schatten darf NICHT auf den Rahmen (außerhalb Boxboden) fallen */
+      -webkit-clip-path: inset(var(--step) var(--step) var(--step) var(--step));
+      clip-path: inset(var(--step) var(--step) var(--step) var(--step));
+    }
 
     .slot{
       position:absolute;
@@ -235,7 +274,7 @@
       border: var(--slot-border-w) solid var(--slot-border);
       border-radius: var(--cell-radius);
 
-      z-index: 7;
+      z-index: 8;
 
       box-shadow:
         1px 1px 0 rgba(255,255,255,0.18) inset,
@@ -244,6 +283,14 @@
         2px 2px 3px -1px rgba(0,0,0,0.20);
     }
 
+    /* Slot-Positionen für W1:
+       4B, 3B, 2C, 2D (laut Anweisung) */
+    .w1-4b{ left: calc(1 * var(--step)); top: calc(3 * var(--step)); } /* row4 colB */
+    .w1-3b{ left: calc(1 * var(--step)); top: calc(2 * var(--step)); } /* row3 colB */
+    .w1-2c{ left: calc(2 * var(--step)); top: calc(1 * var(--step)); } /* row2 colC */
+    .w1-2d{ left: calc(3 * var(--step)); top: calc(1 * var(--step)); } /* row2 colD */
+
+    /* Zahlen bleiben vorerst leer (sichtbar, aber kein Inhalt) */
     .slot .num{
       position:absolute;
       inset:0;
@@ -251,6 +298,8 @@
       align-items:center;
       justify-content:center;
       user-select:none;
+      opacity: 0;          /* W1: keine Zahlen */
+      visibility: hidden;  /* W1: keine Zahlen */
     }
 
     .slot .num > span{
@@ -317,11 +366,22 @@
   <div class="stage">
     <div class="board" id="board">
       <div class="floor" aria-hidden="true"></div>
+
+      <!-- W1 Schatten (nur Box-Innenraum sichtbar) -->
+      <div class="w1Shadow" aria-hidden="true"></div>
+
+      <!-- W1 Layer: Würfelfläche + Slots -->
+      <div class="w1Layer" id="w1Layer" aria-label="W1">
+        <div class="cubeW1 w1Cube" aria-label="W1 Würfelfläche"></div>
+
+        <div class="slot w1-4b read-north" data-w1="A"><div class="num"><span></span></div></div>
+        <div class="slot w1-3b read-north" data-w1="B"><div class="num"><span></span></div></div>
+        <div class="slot w1-2c read-north" data-w1="C"><div class="num"><span></span></div></div>
+        <div class="slot w1-2d read-north" data-w1="D"><div class="num"><span></span></div></div>
+      </div>
+
       <div class="ball" aria-label="Kugel"></div>
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
-
-      <!-- ✅ W2-FINAL + W3-FINAL (BaseLayer) komplett GELÖSCHT -->
-      <!-- ✅ W3–W2 KIP-Layer komplett GELÖSCHT -->
 
       <!-- (bleibt als spätere Basis im Code) -->
       <div class="pairLayer" id="pairLayer" aria-label="W2+W1 als Gruppe (KIP, gespeichert)">
@@ -349,9 +409,6 @@
     const boardEl = document.getElementById("board");
     const grid = document.getElementById("grid");
     const btn = document.getElementById("btnBestuecken");
-
-    const slotEls = Array.from(document.querySelectorAll(".pairLayer .slot"));
-    const slotSpanEls = new Map(slotEls.map(s => [s.dataset.slot, s.querySelector(".num > span")]));
 
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
@@ -399,35 +456,8 @@
       grid.dataset.built = "1";
     }
 
-    function setDot(span, number){
-      if(!span) return;
-      span.classList.remove("dot");
-      if (number === 6 || number === 9) span.classList.add("dot");
-    }
-
-    function getUniqueRandomNumbers(count, min, max){
-      const pool = [];
-      for(let i=min; i<=max; i++) pool.push(i);
-      for(let i=pool.length-1; i>0; i--){
-        const j = Math.floor(Math.random() * (i+1));
-        [pool[i], pool[j]] = [pool[j], pool[i]];
-      }
-      return pool.slice(0, count);
-    }
-
-    function setRandomNumbers(){
-      const nums = getUniqueRandomNumbers(12, 1, 12);
-      const keysST = ["S1","S2","S3","S4","T1","T2","T3","T4"];
-      keysST.forEach((k, idx) => {
-        const span = slotSpanEls.get(k);
-        if(!span) return;
-        const n = nums[idx];
-        span.textContent = String(n);
-        setDot(span, n);
-      });
-    }
-
-    btn.addEventListener("click", () => setRandomNumbers());
+    // Button bleibt fürs nächste Schritt-Setup (aktuell macht er bewusst nichts Sichtbares)
+    btn.addEventListener("click", () => { /* W1 hat noch keine Zahlen */ });
 
     window.addEventListener("load", () => {
       setBoardSquare();
@@ -435,7 +465,6 @@
       setTimeout(setBoardSquare, 80);
 
       buildGridOnce();
-      setRandomNumbers();
     });
 
     window.addEventListener("resize", () => {
